--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                 <ul class="nav-list">
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="gallery" class="nav-link">Our Team</a></li>
-                    <li><a href="photos" class="nav-link">Gallery</a></li>
+                    <li><a href="photos" class="nav-link">photo gallery</a></li>
                     <li><a href="events" class="nav-link">Our Events</a></li>
                     <li><a href="documentary" class="nav-link">Documentary</a></li>
                     <li><a href="tatva" class="nav-link">Tatva</a></li>
@@ -1060,6 +1060,7 @@
     </script>
 </body>
 </html>
+
 
 
 
