--- a/photo gallery.html
+++ b/photo gallery.html
@@ -261,6 +261,7 @@
                 <ul class="nav-list">
                     <li><a href="index#about" class="nav-link">About</a></li>
                     <li><a href="gallery" class="nav-link active">Our Team</a></li>
+                    <li><a href="photos" class="nav-link">photo gallery</a></li>
                     <li><a href="events" class="nav-link">Our Events</a></li>
                     <li><a href="documentary" class="nav-link">Documentary</a></li>
                     <li><a href="tatva" class="nav-link">Tatva</a></li>
