--- a/tatva.html
+++ b/tatva.html
@@ -308,6 +308,7 @@
                 <ul class="nav-list">
                     <li><a href="index#home" class="nav-link">Home</a></li>
                     <li><a href="gallery" class="nav-link">Our Team</a></li>
+                    <li><a href="photos" class="nav-link">Gallery</a></li>
                     <li><a href="events" class="nav-link">Our Events</a></li>
                     <li><a href="documentary" class="nav-link">Documentary</a></li>
                     <li><a href="tatva" class="nav-link">Tatva</a></li>
@@ -461,6 +462,7 @@
 </body>
 
 </html>
+
 
 
 
