--- a/index.html
+++ b/index.html
@@ -780,13 +780,13 @@
                             and other exciting inter-college contests. All of this comes together in a vibrant celebration of creativity, innovation, and teamwork, making Ace of Spade an unforgettable experience for everyone.</p>
                     </div>
                     <div class="pub-card stagger-item" style="transition-delay: 0.3s;">
-                        <div class="pub-img-container"><img src="images/WORKSHOPS.jpg" alt="Seminars"></div>
+                        <div class="pub-img-container"><img src="images/images/Workshops.jpg" alt="Seminars"></div>
                         <a href="workshop#workshops"><span class="tag">know more</span></a>
                         <h3>Workshops</h3>
                         <p>SPADE organizes practical and skill building workshops that empower students with hands on knowledge and industry insights. The workshops are based on topics from data analysis and research writing to career strategies and digital marketing. These sessions provide students with skills, expert guidance, and opportunities to enhance both academic and professional growth.</p>
                     </div>
                     <div class="pub-card stagger-item" style="transition-delay: 0.5s;">
-                        <div class="pub-img-container"><img src="images/SEMINARS.jpg" alt="Workshops"></div>
+                        <div class="pub-img-container"><img src="images/Seminars.jpg" alt="Workshops"></div>
                         <a href="workshop#seminars"><span class="tag">Know more</span></a>
                         <h3>Seminars</h3>
                         <p>Our seminars provide interactive workshops with experts, exploring evolving job trends like freelancing and short-term projects. Through interviews and knowledge sharing, these sessions highlight future directions in the workforce while giving students valuable learning experiences from some of the best in the field.</p>
@@ -1060,6 +1060,7 @@
     </script>
 </body>
 </html>
+
 
 
 
