--- a/photos.html
+++ b/photos.html
@@ -320,24 +320,32 @@
     <script>
         // Gallery images - Add your image paths here
         const galleryImages = [
-            'galleryimg/President.jpeg',
-            'galleryimg/vicepresident.jpg',
-            'galleryimg/gensec.jpeg',
-            'galleryimg/treasurer.jpg',
-            'galleryimg/Advisor.jpeg',
-            'galleryimg/studentcoordinator.jpg',
-            'galleryimg/PRhead.jpeg',
-            'galleryimg/PRhead2.jpg',
-            'galleryimg/SMhead.jpeg',
-            'galleryimg/editorial Head.jpg',
-            'galleryimg/techhead.jpg',
-            'galleryimg/researchhead2.jpg',
-            'galleryimg/researchhead.jpg',
-            'images/spadeteam.JPEG',
-            'images/aos.jpeg',
-            'images/WORKSHOPS.jpg',
-            'images/SEMINARS.jpg',
-            'images/review.jpg'
+            IMG-20251112-WA0090.jpg
+IMG_0117.jpg
+IMG_0166.jpg
+IMG_20251112_123359.jpg
+IMG_20251112_123402.jpg
+IMG_20251112_123556.jpg
+IMG_20251112_125507.jpg
+IMG_20260130_161510.jpg
+IMG_2270.jpg
+IMG_2284.jpg
+IMG_3316.JPG
+IMG_3851.jpg
+IMG_3861.jpg
+IMG_3863.jpg
+IMG_4193.jpg
+IMG_4210.jpg
+IMG_4257.jpg
+IMG_4331.jpg
+IMG_4363.jpg
+IMG_5047.JPG
+IMG_8439.jpg
+IMG_8452.jpg
+IMG_8483.jpg
+IMG_9686.JPG
+IMG_9687.JPG
+IMG_9695.JPG
         ];
 
         document.addEventListener('DOMContentLoaded', () => {
