--- a/photos.html
+++ b/photos.html
@@ -319,34 +319,34 @@
 
     <script>
         // Gallery images - Add your image paths here
-        const galleryImages = [
-            IMG-20251112-WA0090.jpg
-IMG_0117.jpg
-IMG_0166.jpg
-IMG_20251112_123359.jpg
-IMG_20251112_123402.jpg
-IMG_20251112_123556.jpg
-IMG_20251112_125507.jpg
-IMG_20260130_161510.jpg
-IMG_2270.jpg
-IMG_2284.jpg
-IMG_3316.JPG
-IMG_3851.jpg
-IMG_3861.jpg
-IMG_3863.jpg
-IMG_4193.jpg
-IMG_4210.jpg
-IMG_4257.jpg
-IMG_4331.jpg
-IMG_4363.jpg
-IMG_5047.JPG
-IMG_8439.jpg
-IMG_8452.jpg
-IMG_8483.jpg
-IMG_9686.JPG
-IMG_9687.JPG
-IMG_9695.JPG
-        ];
+        
+ "images/IMG-20251112-WA0090.jpg",
+    "images/IMG_0117.jpg",
+    "images/IMG_0166.jpg",
+    "images/IMG_20251112_123359.jpg",
+    "images/IMG_20251112_123402.jpg",
+    "images/IMG_20251112_123556.jpg",
+    "images/IMG_20251112_125507.jpg",
+    "images/IMG_20260130_161510.jpg",
+    "images/IMG_2270.jpg",
+    "images/IMG_2284.jpg",
+    "images/IMG_3316.JPG",
+    "images/IMG_3851.jpg",
+    "images/IMG_3861.jpg",
+    "images/IMG_3863.jpg",
+    "images/IMG_4193.jpg",
+    "images/IMG_4210.jpg",
+    "images/IMG_4257.jpg",
+    "images/IMG_4331.jpg",
+    "images/IMG_4363.jpg",
+    "images/IMG_5047.JPG",
+    "images/IMG_8439.jpg",
+    "images/IMG_8452.jpg",
+    "images/IMG_8483.jpg",
+    "images/IMG_9686.JPG",
+    "images/IMG_9687.JPG",
+    "images/IMG_9695.JPG"
+];
 
         document.addEventListener('DOMContentLoaded', () => {
             const preloader = document.getElementById('preloader');
