--- a/photos.html
+++ b/photos.html
@@ -319,7 +319,7 @@
 
     <script>
         // Gallery images - Add your image paths here
-        
+  const galleryImages = [      
  "images/IMG-20251112-WA0090.jpg",
     "images/IMG_0117.jpg",
     "images/IMG_0166.jpg",
