--- a/photos.html
+++ b/photos.html
@@ -320,8 +320,8 @@
     <script>
         // Gallery images - Add your image paths here
   const galleryImages = [      
-gallery-photos/IMG-20251112-WA0090.jpg
-];
+ "gallery-photos/IMG-20251112-WA0090.jpg"
+  ];
 
         document.addEventListener('DOMContentLoaded', () => {
             const preloader = document.getElementById('preloader');
