--- a/photos.html
+++ b/photos.html
@@ -320,16 +320,16 @@
     <script>
         // Gallery images - Add your image paths here
   const galleryImages = [      
- "gallery-photos/IMG-20251112-WA0090.jpg"
-      "gallery-photos/IMG_3316.JPG"
-        "gallery-photos/IMG_2284.jpg"
-        "gallery-photos/IMG_2270.jpg"
-        "gallery-photos/IMG_20251112_125507.jpg"
-        "gallery-photos/IMG_20251112_123402.jpg"
-"gallery-photos/IMG_20251112_123556.jpg"
-"gallery-photos/IMG_0166.jpg"
-"gallery-photos/IMG_0117.jpg"
-        "gallery-photos/IMG-20251112-WA0148.jpg"
+ gallery-photos/IMG-20251112-WA0090.jpg",
+    "gallery-photos/IMG_3316.JPG",
+    "gallery-photos/IMG_2284.jpg",
+    "gallery-photos/IMG_2270.jpg",
+    "gallery-photos/IMG_20251112_125507.jpg",
+    "gallery-photos/IMG_20251112_123402.jpg",
+    "gallery-photos/IMG_20251112_123556.jpg",
+    "gallery-photos/IMG_0166.jpg",
+    "gallery-photos/IMG_0117.jpg",
+    "gallery-photos/IMG-20251112-WA0148.jpg"
     ];
 
         document.addEventListener('DOMContentLoaded', () => {
