--- a/photos.html
+++ b/photos.html
@@ -320,7 +320,7 @@
     <script>
         // Gallery images - Add your image paths here
   const galleryImages = [      
- gallery-photos/IMG-20251112-WA0090.jpg",
+ "gallery-photos/IMG-20251112-WA0090.jpg",
     "gallery-photos/IMG_3316.JPG",
     "gallery-photos/IMG_2284.jpg",
     "gallery-photos/IMG_2270.jpg",
