--- a/photos.html
+++ b/photos.html
@@ -329,7 +329,16 @@
     "gallery-photos/IMG_20251112_123556.jpg",
     "gallery-photos/IMG_0166.jpg",
     "gallery-photos/IMG_0117.jpg",
-    "gallery-photos/IMG-20251112-WA0148.jpg"
+    "gallery-photos/IMG-20251112-WA0148.jpg",
+      "gallery-photos/IMG_9695.JPG",
+      "gallery-photos/IMG_9687.JPG",
+        "gallery-photos/IMG_9686.JPG",
+        "gallery-photos/IMG_8452.jpg",
+"gallery-photos/IMG_5047.JPG",
+        "gallery-photos/IMG_4363.jpg",
+        "gallery-photos/IMG_4331.jpg",
+        "gallery-photos/IMG_4210.jpg",
+        "gallery-photos/IMG_3851.jpg"
     ];
 
         document.addEventListener('DOMContentLoaded', () => {
