--- a/index.html
+++ b/index.html
@@ -696,20 +696,22 @@
                     <a href="#about" class="btn btn-primary">Discover More</a>
                    
                 </div>
-                <div class="hero-image slide-in-right">
-                    <img src="images/spadeteam.JPEG" alt="SPADE Team Photo">
-                </div>
-                <div class="social-links">
-                    <a href="https://www.instagram.com/spade.shivaji" target="_blank" class="social-link" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/spadeshivaji" target="_blank" class="social-link" aria-label="Connect with us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://www.youtube.com/@spadeshivaji9834" target="_blank" class="social-link" aria-label="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>
-                </div>
-            </div>
-            <div class="hero-divider-container">
-                <div class="waves">
-                    <div class="wave wave1"></div>
-                    <div class="wave wave2"></div>
-                </div>
+                <div class="hero-content fade-in-up">
+    <h1 class="hero-title">Society for Practical Applications & Development of Economics</h1>
+    <svg class="hero-subtitle-svg" ...>
+        ...
+    </svg>
+    <a href="#about" class="btn btn-primary">Discover More</a>
+    
+    <div class="social-links">
+        <a href="https://www.instagram.com/spade.shivaji" target="_blank" class="social-link" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/spadeshivaji" target="_blank" class="social-link" aria-label="Connect with us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.youtube.com/@spadeshivaji9834" target="_blank" class="social-link" aria-label="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>
+    </div>
+</div>
+<div class="hero-image slide-in-right">
+    <img src="images/spadeteam.JPEG" alt="SPADE Team Photo">
+</div>
             </div>
         </section>
 
@@ -1060,6 +1062,7 @@
     </script>
 </body>
 </html>
+
 
 
 
