--- a/index.html
+++ b/index.html
@@ -668,42 +668,33 @@
                 <li></li>
                 <li></li>
             </ul>
-            <div class="container hero-container">
-                <div class="hero-content fade-in-up">
-                    <h1 class="hero-title">Society for Practical Applications & Development of Economics</h1>
-                    <svg class="hero-subtitle-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 100" preserveAspectRatio="xMidYMid meet" style="width: 100%; max-width: 500px; height: auto;">
-                        <defs>
-                            <linearGradient id="gradientText" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" style="stop-color: #D1DEDE; stop-opacity: 1;" />
-                                <stop offset="50%" style="stop-color: #b7eaea; stop-opacity: 1;" />
-                                <stop offset="100%" style="stop-color: #adedeD; stop-opacity: 1;" />
-                            </linearGradient>
-                            <filter id="glowEffect" x="-50%" y="-50%" width="200%" height="200%">
-                                <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
-                                <feMerge>
-                                    <feMergeNode in="blur" />
-                                    <feMergeNode in="SourceGraphic" />
-                                </feMerge>
-                            </filter>
-                        </defs>
-                        <text x="50%" y="40%" text-anchor="middle" dominant-baseline="middle" font-family="Poppins, sans-serif" font-size="40" fill="url(#gradientText)" filter="url(#glowEffect)">
-                            Developing Economics, 
-                        </text>
-                        <text x="50%" y="76%" text-anchor="middle" dominant-baseline="middle" font-family="Poppins, sans-serif" font-size="40" fill="url(#gradientText)" filter="url(#glowEffect)">
-                            Elevating Research
-                        </text>
-                    </svg>
-                    <a href="#about" class="btn btn-primary">Discover More</a>
-                   
-                </div>
-                <div class="hero-content fade-in-up">
+           <div class="hero-content fade-in-up">
     <h1 class="hero-title">Society for Practical Applications & Development of Economics</h1>
-    <svg class="hero-subtitle-svg" ...>
-        ...
+    <svg class="hero-subtitle-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 100" preserveAspectRatio="xMidYMid meet" style="width: 100%; max-width: 500px; height: auto;">
+        <defs>
+            <linearGradient id="gradientText" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" style="stop-color: #D1DEDE; stop-opacity: 1;" />
+                <stop offset="50%" style="stop-color: #b7eaea; stop-opacity: 1;" />
+                <stop offset="100%" style="stop-color: #adedeD; stop-opacity: 1;" />
+            </linearGradient>
+            <filter id="glowEffect" x="-50%" y="-50%" width="200%" height="200%">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
+                <feMerge>
+                    <feMergeNode in="blur" />
+                    <feMergeNode in="SourceGraphic" />
+                </feMerge>
+            </filter>
+        </defs>
+        <text x="50%" y="40%" text-anchor="middle" dominant-baseline="middle" font-family="Poppins, sans-serif" font-size="40" fill="url(#gradientText)" filter="url(#glowEffect)">
+            Developing Economics, 
+        </text>
+        <text x="50%" y="76%" text-anchor="middle" dominant-baseline="middle" font-family="Poppins, sans-serif" font-size="40" fill="url(#gradientText)" filter="url(#glowEffect)">
+            Elevating Research
+        </text>
     </svg>
     <a href="#about" class="btn btn-primary">Discover More</a>
     
-    <div class="social-links">
+    <div class="social-links" style="margin-top: 2rem; justify-content: center;">
         <a href="https://www.instagram.com/spade.shivaji" target="_blank" class="social-link" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/company/spadeshivaji" target="_blank" class="social-link" aria-label="Connect with us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://www.youtube.com/@spadeshivaji9834" target="_blank" class="social-link" aria-label="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>
@@ -1062,6 +1053,7 @@
     </script>
 </body>
 </html>
+
 
 
 
