--- a/index.html
+++ b/index.html
@@ -698,8 +698,7 @@
             <div class="social-links">
                 <a href="https://www.instagram.com/spade.shivaji" target="_blank" class="social-link" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/company/spadeshivaji" target="_blank" class="social-link" aria-label="Connect with us on LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.youtube.com/@spadeshivaji9834" target="_blank" class="social-link" aria-label="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>
-            </div>
+<a href="https://youtube.com/@spade.shivaji?si=Az8GZoaI0RdeEmbn" target="_blank" class="social-link" aria-label="Subscribe to our YouTube channel"><i class="fab fa-youtube"></i></a>            </div>
         </div>
         <div class="hero-image slide-in-right">
             <img src="images/spadeteam.JPEG" alt="SPADE Team Photo">
@@ -1054,6 +1053,7 @@
     </script>
 </body>
 </html>
+
 
 
 
