--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                     <li><a href="events" class="nav-link">Our Events</a></li>
                     <li><a href="documentary" class="nav-link">Documentary</a></li>
                     <li><a href="tatva" class="nav-link">Tatva</a></li>
-                    <li><a href="newsletter" class="nav-link">Newsletter</a></li>
+                    <li><a href="newsletter" class="nav-link">Our Publications</a></li>
                     <li><a href="#speakers" class="nav-link">Speakers</a></li>
                     <li><a href="#sponsors" class="nav-link">Sponsors</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -1051,6 +1051,7 @@
     </script>
 </body>
 </html>
+
 
 
 
