--- a/newsletter.html
+++ b/newsletter.html
@@ -438,7 +438,7 @@
                     <li><a href="events" class="nav-link">Our Events</a></li>
                     <li><a href="documentary" class="nav-link">Documentary</a></li>
                     <li><a href="tatva" class="nav-link">Tatva</a></li>
-                    <li><a href="newsletter" class="nav-link">NewsLetter</a></li>
+                    <li><a href="newsletter" class="nav-link">Our Publications</a></li>
                     <li><a href="index#speakers" class="nav-link">Speakers</a></li>
                     <li><a href="index#sponsors" class="nav-link">Sponsors</a></li>
                     <li><a href="index#contact" class="nav-link">Contact</a></li>
@@ -610,6 +610,7 @@
     </script>
 </body>
 </html>
+
 
 
 
