--- a/newsletter.html
+++ b/newsletter.html
@@ -556,6 +556,64 @@
                 </div>
             </div>
         </section>
+
+        <!-- Research Reports Section -->
+        <section class="section newsletter-section" id="research-reports" style="padding-top: 0;">
+            <div class="container">
+                <h2 class="section-title fade-in-up">Research Reports</h2>
+                <div class="newsletter-box stagger-children">
+
+                    <!-- Research Report Item 1 -->
+                    <div class="newsletter-item stagger-item" style="transition-delay: 0.1s;">
+                        <div class="newsletter-date">January 15, 2025</div>
+                        <div class="newsletter-topic">
+                            <h3>Digital Economy in India</h3>
+                            <p>An analysis of India's digital transformation and its economic impact</p>
+                        </div>
+                        <div class="newsletter-read">
+                            <a href="#" target="_blank" class="btn-read">Read <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- Research Report Item 2 -->
+                    <div class="newsletter-item stagger-item" style="transition-delay: 0.2s;">
+                        <div class="newsletter-date">December 10, 2024</div>
+                        <div class="newsletter-topic">
+                            <h3>Sustainable Development Goals</h3>
+                            <p>Progress and challenges in achieving SDGs in developing economies</p>
+                        </div>
+                        <div class="newsletter-read">
+                            <a href="#" target="_blank" class="btn-read">Read <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- Research Report Item 3 -->
+                    <div class="newsletter-item stagger-item" style="transition-delay: 0.3s;">
+                        <div class="newsletter-date">November 22, 2024</div>
+                        <div class="newsletter-topic">
+                            <h3>Financial Inclusion Study</h3>
+                            <p>Examining the role of fintech in bridging economic gaps</p>
+                        </div>
+                        <div class="newsletter-read">
+                            <a href="#" target="_blank" class="btn-read">Read <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                    <!-- Research Report Item 4 -->
+                    <div class="newsletter-item stagger-item" style="transition-delay: 0.4s;">
+                        <div class="newsletter-date">October 5, 2024</div>
+                        <div class="newsletter-topic">
+                            <h3>Climate Economics</h3>
+                            <p>Economic implications of climate change and mitigation strategies</p>
+                        </div>
+                        <div class="newsletter-read">
+                            <a href="#" target="_blank" class="btn-read">Read <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
@@ -610,6 +668,7 @@
     </script>
 </body>
 </html>
+
 
 
 
