--- a/tatva.html
+++ b/tatva.html
@@ -312,7 +312,7 @@
                     <li><a href="events" class="nav-link">Our Events</a></li>
                     <li><a href="documentary" class="nav-link">Documentary</a></li>
                     <li><a href="tatva" class="nav-link">Tatva</a></li>
-                    <li><a href="newsletter" class="nav-link">NewsLetter</a></li>
+                    <li><a href="newsletter" class="nav-link">Our Publicaton</a></li>
                     <li><a href="index#speakers" class="nav-link">Speakers</a></li>
                     <li><a href="index#sponsors" class="nav-link">Sponsors</a></li>
                     <li><a href="index#contact" class="nav-link">Contact</a></li>
@@ -462,6 +462,7 @@
 </body>
 
 </html>
+
 
 
 
