--- a/index.html
+++ b/index.html
@@ -204,14 +204,15 @@
             gap: 2.5rem;
         }
 
-        .nav-link {
-            text-decoration: none;
-            color: var(--text-color);
-            font-weight: 600;
-            position: relative;
-            padding: 5px 0;
-            transition: color var(--transition-fast);
-        }
+       .nav-link {
+    text-decoration: none;
+    color: var(--text-color);
+    font-weight: 600;
+    position: relative;
+    padding: 5px 8px;
+    transition: color var(--transition-fast);
+    white-space: nowrap;
+}
 
         .nav-link::before {
             content: '';
@@ -1051,6 +1052,7 @@
     </script>
 </body>
 </html>
+
 
 
 
